# k8s-log-monitoring

./: .gitignore  pyproject.toml  pyrightconfig.json  requirements.txt  setup_kaggle.ps1
data/processed/: hybrid_security_system_dataset.csv  security_attacks_only.csv  system_anomalies_only.csv
data/processed/cleaned/: cleaned_logs.csv  cleaned_logs.parquet  schema.json
data/processed/output/statistics/: data_profile.html  data_quality_report.json  missing_values_report.json
data/processed/parquet/: hybrid_dataset.parquet
docker/: docker-compose.yml
docs/: data_specification.md  user_guide.md
notebooks/: 01_data_exploration.ipynb
reports/validation/: data_validation_report_20251229_151700.json
scripts/: create_kafka_topic.py  generate_architecture_diagram.py  generate_class_diagram.py  increase_partitions.py  run_dashboard.bat  run_dashboard.sh  show_kafka_topic.py  start_kafka.sh  test_kafka_send.py
src/dashboard/: README.md  __init__.py  app.py
src/dashboard/components/: __init__.py  alerts_panel.py  creative_visualizations.py  metrics.py  server_map.py  timeline.py
src/dashboard/utils/: __init__.py  data_loader.py
src/data_collection/: create_hybrid_dataset.py  data_preprocessor.py  data_validator.py  download_dataset.py  generate_simulated_logs.py  k8s_real_time_simulator.py  real_time_collector.py  run_pipeline.py  run_system.py  stream_logs.py  test_system.py
src/k8s_log_monitoring.egg-info/: PKG-INFO
src/utils/: config.py  helpers.py  logger.py
tests/: test_data_collection.py
(+3 files in other folders)
